--- a/vvp/Makefile.in
+++ b/vvp/Makefile.in
@@ -106,11 +106,12 @@ distclean: clean
 	rm -f stamp-config-h config.h
 
 cppcheck: $(O:.o=.cc) draw_tt.c
-	cppcheck --enable=all --std=posix --std=c99 --std=c++03 -f \
+	cppcheck --enable=all --std=c99 --std=c++03 -f \
 	         --suppressions-list=$(srcdir)/cppcheck.sup \
 	         -UMODULE_DIR1 -UMODULE_DIR2 -UYY_USER_INIT \
 	         -UYYPARSE_PARAM -UYYPRINT -Ushort -Usize_t -Uyyoverflow \
 	         -UYYTYPE_INT8 -UYYTYPE_INT16 -UYYTYPE_UINT8 -UYYTYPE_UINT16 \
+	         -UYYSTYPE -UINFINITY -U__SIZE_TYPE__ -Ufree \
 	         --relative-paths=$(srcdir) $(INCLUDE_PATH) $^
 
 Makefile: $(srcdir)/Makefile.in
