Actions: only test on pushes to master.
Continue to test all pull requests, but only retest pushes to
master so that work in progress prs don't create quite as much
test traffic.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,11 @@
 name: test
 
 on:
+  # Every push onto the main branch triggers a retest.
   push:
+    branches:
+      - master
+  # All pull_requests trigger a retest.
   pull_request:
 
 jobs:
