Fix CI on Windows.
autoconf has been removed from the MSYS2 base-devel group.

--- a/msys2/PKGBUILD
+++ b/msys2/PKGBUILD
@@ -9,7 +9,8 @@ url="http://iverilog.icarus.com/"
 license=('GPLv2+')
 depends=("${MINGW_PACKAGE_PREFIX}-readline"
          "${MINGW_PACKAGE_PREFIX}-gcc-libs")
-makedepends=("${MINGW_PACKAGE_PREFIX}-gcc"
+makedepends=("autoconf"
+             "${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-ghostscript")
 
 source=()
