Fix CI on Windows again.
man-db has now been removed from the base-devel group.

(cherry picked from commit f705e7b61c6e195c9ba9e82632ebcc9a9c3cfbab)

--- a/msys2/PKGBUILD
+++ b/msys2/PKGBUILD
@@ -10,6 +10,7 @@ license=('GPLv2+')
 depends=("${MINGW_PACKAGE_PREFIX}-readline"
          "${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("autoconf"
+             "man-db"
              "${MINGW_PACKAGE_PREFIX}-gcc"
              "${MINGW_PACKAGE_PREFIX}-ghostscript")
 
