Do not fail msys build if there are no pdf files installed.

--- a/msys2/PKGBUILD
+++ b/msys2/PKGBUILD
@@ -34,5 +34,5 @@ package() {
   cd "${srcdir}"/../..
   mingw32-make DESTDIR="${pkgdir}" install
   mkdir -p "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}"
-  mv "${pkgdir}${MINGW_PREFIX}"/*.pdf "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}"
+  mv "${pkgdir}${MINGW_PREFIX}"/*.pdf "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}" || true
 }
