Allow io-range-error warnings to be disabled (issue #788)
It was common practice in the past to just declare a port direction
and declare it as a vector in a subsequent type declaration. Versions
of the standard up to and including 1364-2005 include an example that
does this (e.g. 1364-2005 section 12.3.7). Users may have old or
third-party code that they can't or don't want to modify, so allow
the warning to be suppressed by including it in the anachronisms
category.

--- a/driver/iverilog.man.in
+++ b/driver/iverilog.man.in
@@ -122,7 +122,8 @@ practice in the past to only specify the range for the net/register
 declaration and some tools still allow this. By default any mismatch is
 reported as a error. Using \fB\-gno\-io\-range\-error\fP will produce a
 warning instead of a fatal error for the case of a vectored net/register
-and a scalar port declaration.
+and a scalar port declaration. This warning is included in the
+\fBanachronisms\fP category.
 .TP 8
 .B -gstrict-ca-eval\fI|\fP-gno-strict-ca-eval
 The standard requires that if any input to a continuous assignment
