--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,7 +83,7 @@ jobs:
       run:
         shell: msys2 {0}
     env:
-      MINGW_INSTALLS: ${{ matrix.msystem }}
+      MINGW_ARCH: ${{ matrix.msystem }}
     steps:
 
     - run: git config --global core.autocrlf input
