ci: Windows: Add gperf to dependency list
msys2 removed the gperf package from the base-devel package collection[1].

Add gperf explicitly to the dependency list, without this the Windows
CI will fail.

[1] https://github.com/msys2/MSYS2-packages/commit/085698dce3b5e481f0db586173d0157c8e5c8ff9

Signed-off-by: Lars-Peter Clausen <lars@metafoo.de>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,6 +99,7 @@ jobs:
         install: >
           git
           base-devel
+          gperf
           mingw-w64-${{ matrix.arch }}-toolchain
 
     - name: Build and check
