ci: Use parallel build
The github CI VM has multiple CPUs. 2 for Linux and Windows, 3 for macOS.
Make use of parallel build to speed up the CI tests a bit.

For Windows the `makepkg-mingw` command already schedules a parallel
build, so no changes are made to the Windows build.

Signed-off-by: Lars-Peter Clausen <lars@metafoo.de>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         export PATH="/usr/local/opt/bison/bin:$PATH"
         autoconf
         ./configure
-        make check
+        make -j$(nproc) check
         sudo make install
 
     - name: Test
@@ -58,7 +58,7 @@ jobs:
       run: |
         autoconf
         ./configure
-        make check
+        make -j$(nproc) check
         sudo make install
 
     - name: Test
