--- a/vvp/Makefile.in
+++ b/vvp/Makefile.in
@@ -67,7 +67,7 @@ MDIR1 = -DMODULE_DIR1='"$(libdir)/ivl$(suffix)"'
 VPI = vpi_modules.o vpi_bit.o vpi_callback.o vpi_cobject.o vpi_const.o vpi_darray.o \
       vpi_event.o vpi_iter.o vpi_mcd.o \
       vpi_priv.o vpi_scope.o vpi_real.o vpi_signal.o vpi_string.o vpi_tasks.o vpi_time.o \
-      vpi_vthr_vector.o vpip_bin.o vpip_hex.o vpip_oct.o \
+      vpi_vthr_vector.o vpi_tchk.o vpip_bin.o vpip_hex.o vpip_oct.o \
       vpip_to_dec.o vpip_format.o vvp_vpi.o
 
 O = main.o parse.o parse_misc.o lexor.o arith.o array_common.o array.o bufif.o compile.o \
@@ -78,7 +78,7 @@ O = main.o parse.o parse_misc.o lexor.o arith.o array_common.o array.o bufif.o c
     symbols.o ufunc.o codes.o vthread.o schedule.o \
     statistics.o tables.o udp.o vvp_island.o vvp_net.o vvp_net_sig.o \
     vvp_object.o vvp_cobject.o vvp_darray.o event.o logic.o delay.o \
-    words.o island_tran.o $(VPI)
+    words.o island_tran.o tchk.o $(VPI)
 
 all: dep vvp@EXEEXT@ vvp.man
 
