ci: Upload test logs as build artifacts
To be able to better understand why a test might fail on a particular
platform upload the log files as a build artifact.

Signed-off-by: Lars-Peter Clausen <lars@metafoo.de>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,12 @@ jobs:
 
     - name: Test
       run: ./.github/test.sh
-
+    - name: Archive test logs
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-logs-macOS
+        path: ivtest/*log/*
 
   lin:
     strategy:
@@ -66,6 +71,13 @@ jobs:
 
     - name: Test
       run: ./.github/test.sh
+
+    - name: Archive test logs
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-logs-ubuntu-${{ matrix.os }}
+        path: ivtest/*log/*
 
     - name: Documentation
       run: |
@@ -119,6 +131,13 @@ jobs:
     - name: Test
       run: |
         ./.github/test.sh
+
+    - name: Archive test logs
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-logs-${{ matrix.msystem }}-${{ matrix.arch }}
+        path: ivtest/*log/*
 
     - uses: actions/upload-artifact@v4
       with:
