Ignore new ivtest output files in git

--- a/ivtest/.gitignore
+++ b/ivtest/.gitignore
@@ -32,4 +32,6 @@ tmp_blif.vvp
 # Some tests do not work out of the work directory, so
 # ignore these files that they leave in the home directory.
 dump.vcd
+dump.lxt
+dump.lx2
 foo.vcd
