--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,22 +7,23 @@ on:
       - master
   # All pull_requests trigger a retest.
   pull_request:
+  workflow_dispatch:
 
 jobs:
 
   mac:
     strategy:
       fail-fast: false
-    runs-on: macos-latest
+    runs-on: macos-12
     name: '🍏 macOS'
     steps:
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install dependencies
       run: |
         brew install bison
-        pip3 install docopt
+        pip3 install --break-system-packages docopt
 
     - name: Build, check and install
       run: |
@@ -48,7 +49,7 @@ jobs:
     name: '🐧 Ubuntu ${{ matrix.os }}'
     steps:
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install dependencies
       run: |
@@ -89,7 +90,7 @@ jobs:
     - run: git config --global core.autocrlf input
       shell: bash
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - uses: msys2/setup-msys2@v2
       with:
@@ -102,7 +103,7 @@ jobs:
           python-pip
           mingw-w64-${{ matrix.arch }}-toolchain
 
-    - uses: actions/setup-python@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: '>=3.5'
 
@@ -118,7 +119,7 @@ jobs:
       run: |
         ./.github/test.sh
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.msystem }}-${{ matrix.arch }}
         path: msys2/*.zst
