--- a/driver/Makefile.in
+++ b/driver/Makefile.in
@@ -30,6 +30,7 @@ bindir = $(exec_prefix)/bin
 libdir = $(exec_prefix)/lib
 includedir = $(prefix)/include
 mandir = @mandir@
+pdfdir = @docdir@
 
 dllib=@DLLIB@
 
@@ -113,11 +114,14 @@ iverilog.pdf: iverilog.ps
 ifeq (@MINGW32@,yes)
 ifeq ($(MAN),none)
 INSTALL_DOC = installman
+INSTALL_PDFDIR = $(prefix)
 else
 ifeq ($(PS2PDF),none)
 INSTALL_DOC = installman
+INSTALL_PDFDIR = $(prefix)
 else
 INSTALL_DOC = installpdf installman
+INSTALL_PDFDIR = $(pdfdir)
 all: iverilog.pdf
 endif
 endif
@@ -125,6 +129,7 @@ INSTALL_DOCDIR = $(mandir)/man1
 else
 INSTALL_DOC = installman
 INSTALL_DOCDIR = $(mandir)/man1
+INSTALL_PDFDIR = $(prefix)
 endif
 
 install: all installdirs installfiles
@@ -136,16 +141,18 @@ installman: iverilog.man installdirs
 	$(INSTALL_DATA) iverilog.man "$(DESTDIR)$(mandir)/man1/iverilog$(suffix).1"
 
 installpdf: iverilog.pdf installdirs
-	$(INSTALL_DATA) iverilog.pdf "$(DESTDIR)$(prefix)/iverilog$(suffix).pdf"
+	$(INSTALL_DATA) iverilog.pdf "$(DESTDIR)$(pdfdir)/iverilog$(suffix).pdf"
 
 installfiles: $(F) | installdirs
 	$(INSTALL_PROGRAM) ./iverilog@EXEEXT@ "$(DESTDIR)$(bindir)/iverilog$(suffix)@EXEEXT@"
 
 installdirs: $(srcdir)/../mkinstalldirs
-	$(srcdir)/../mkinstalldirs "$(DESTDIR)$(bindir)" "$(DESTDIR)$(INSTALL_DOCDIR)"
+	$(srcdir)/../mkinstalldirs "$(DESTDIR)$(bindir)" \
+		"$(DESTDIR)$(INSTALL_DOCDIR)" \
+		"$(DESTDIR)$(INSTALL_PDFDIR)"
 
 uninstall:
 	rm -f "$(DESTDIR)$(bindir)/iverilog$(suffix)@EXEEXT@"
-	rm -f "$(DESTDIR)$(mandir)/man1/iverilog$(suffix).1" "$(DESTDIR)$(prefix)/iverilog$(suffix).pdf"
+	rm -f "$(DESTDIR)$(mandir)/man1/iverilog$(suffix).1" "$(DESTDIR)$(pdfdir)/iverilog$(suffix).pdf"
 
 -include $(patsubst %.o, dep/%.d, $O)
