--- a/msys2/PKGBUILD
+++ b/msys2/PKGBUILD
@@ -33,7 +33,5 @@ check() {
 
 package() {
   cd "${srcdir}"/../..
-  mingw32-make DESTDIR="${pkgdir}" install
-  mkdir -p "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}"
-  mv "${pkgdir}${MINGW_PREFIX}"/*.pdf "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}"
+  mingw32-make DESTDIR="${pkgdir}" PACKAGE="${_realname}" install
 }
