--- a/vvp/Makefile.in
+++ b/vvp/Makefile.in
@@ -32,6 +32,7 @@ mandir = @mandir@
 # This is actually the directory where we install our own header files.
 # It is a little different from the generic includedir.
 includedir = @includedir@/iverilog$(suffix)
+pdfdir = @docdir@
 
 # For a cross compile these defines will need to be set accordingly.
 HOSTCC = @CC@
@@ -203,11 +204,14 @@ vvp.pdf: vvp.ps
 ifeq (@MINGW32@,yes)
 ifeq ($(MAN),none)
 INSTALL_DOC = installman
+INSTALL_PDFDIR = $(prefix)
 else
 ifeq ($(PS2PDF),none)
 INSTALL_DOC = installman
+INSTALL_PDFDIR = $(prefix)
 else
 INSTALL_DOC = installpdf installman
+INSTALL_PDFDIR = $(pdfdir)
 all: vvp.pdf
 endif
 endif
@@ -215,6 +219,7 @@ INSTALL_DOCDIR = $(mandir)/man1
 else
 INSTALL_DOC = installman
 INSTALL_DOCDIR = $(mandir)/man1
+INSTALL_PDFDIR = $(prefix)
 endif
 
 stamp-config-h: $(srcdir)/config.h.in ../config.status
@@ -230,7 +235,7 @@ installman: vvp.man installdirs
 	$(INSTALL_DATA) vvp.man "$(DESTDIR)$(mandir)/man1/vvp$(suffix).1"
 
 installpdf: vvp.pdf installdirs
-	$(INSTALL_DATA) vvp.pdf "$(DESTDIR)$(prefix)/vvp$(suffix).pdf"
+	$(INSTALL_DATA) vvp.pdf "$(DESTDIR)$(pdfdir)/vvp$(suffix).pdf"
 
 installfiles: $(F) | installdirs
 	$(INSTALL_PROGRAM) ./vvp@EXEEXT@ "$(DESTDIR)$(bindir)/vvp$(suffix)@EXEEXT@"
@@ -240,12 +245,15 @@ ifeq (@LIBVVP@,yes)
 endif
 
 installdirs: $(srcdir)/../mkinstalldirs
-	$(srcdir)/../mkinstalldirs "$(DESTDIR)$(bindir)" "$(DESTDIR)$(libdir)" "$(DESTDIR)$(INSTALL_DOCDIR)"
+	$(srcdir)/../mkinstalldirs "$(DESTDIR)$(bindir)" \
+		"$(DESTDIR)$(libdir)" \
+		"$(DESTDIR)$(INSTALL_DOCDIR)" \
+		"$(DESTDIR)$(INSTALL_PDFDIR)"
 
 
 uninstall: $(UNINSTALL32)
 	rm -f "$(DESTDIR)$(bindir)/vvp$(suffix)@EXEEXT@"
-	rm -f "$(DESTDIR)$(mandir)/man1/vvp$(suffix).1" "$(DESTDIR)$(prefix)/vvp$(suffix).pdf"
+	rm -f "$(DESTDIR)$(mandir)/man1/vvp$(suffix).1" "$(DESTDIR)$(pdfdir)/vvp$(suffix).pdf"
 ifeq (@LIBVVP@,yes)
 	rm -f "$(DESTDIR)$(libdir)/libvvp$(suffix).$(SLEXT)"
 	rm -f "$(DESTDIR)$(includedir)/libvvp.h"
