--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
   mac:
     strategy:
       fail-fast: false
-    runs-on: macos-14-large
+    runs-on: macos-13
     name: '🍏 macOS'
     steps:
 
