--- a/vvp/Makefile.in
+++ b/vvp/Makefile.in
@@ -116,6 +116,7 @@ cppcheck: $(O:.o=.cc) draw_tt.c
 	         -UYYPARSE_PARAM -UYYPRINT -Ushort -Usize_t -Uyyoverflow \
 	         -UYYTYPE_INT8 -UYYTYPE_INT16 -UYYTYPE_UINT8 -UYYTYPE_UINT16 \
 	         -UYYSTYPE -UINFINITY -U__SIZE_TYPE__ -Ufree \
+		 -U__PTRDIFF_TYPE__ \
 	         --relative-paths=$(srcdir) $(INCLUDE_PATH) $^
 
 Makefile: $(srcdir)/Makefile.in
